Fixing small issues

--- a/single-topic-consumer/build.gradle
+++ b/single-topic-consumer/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 		springBootVersion = '1.5.7.RELEASE'
 	}
 	repositories {
+		mavenLocal()
 		mavenCentral()
 	}
 	dependencies {
@@ -24,6 +25,7 @@ ext {
 
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
