--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,9 @@ buildscript {
   }
   repositories {
     mavenLocal()
+    mavenCentral()
   }
-  dependencies {
-    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    classpath("com.github.ksoichiro:gradle-console-reporter:0.5.0")
-    classpath("io.spring.gradle:dependency-management-plugin:0.6.1.RELEASE")
-  }
+
 }
 
 subprojects {
