--- a/single-topic-consumer/build.gradle
+++ b/single-topic-consumer/build.gradle
@@ -29,8 +29,14 @@ repositories {
 	mavenCentral()
 }
 
-
+configurations.all {
+	exclude group: "commons-logging", module: "commons-logging"
+}
 dependencies {
+	compile('org.slf4j:jcl-over-slf4j:1.7.12')
+	compile( 'ch.qos.logback:logback-classic:1.1.3')
+
+	compile ('org.springframework:spring-webmvc:4.1.6.RELEASE')
 	compile("com.fasterxml.jackson.core:jackson-databind")
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jdk8')
 	compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
@@ -42,5 +48,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.kafka:spring-kafka:${spring_kafka_version}")
 	compile("org.springframework.retry:spring-retry")
+
+	testCompile('junit:junit:4.12')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
