--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
-.idea/
+.gradle/
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### Skip JSON Resource Files
+/resources/*.json
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
