--- a/producer/build.gradle
+++ b/producer/build.gradle
@@ -24,6 +24,8 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.kafka:spring-kafka:1.1.3.RELEASE')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
