--- a/producer/build.gradle
+++ b/producer/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 		springBootVersion = '1.5.7.RELEASE'
 	}
 	repositories {
+		mavenLocal()
 		mavenCentral()
 	}
 	dependencies {
@@ -27,5 +28,6 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.kafka:spring-kafka:1.1.3.RELEASE')
+	compile('io.dropwizard.metrics:metrics-core:3.1.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
